# dropbox

./: .gitignore
client/: go.mod  go.sum  main.go
client/auth/: signin.go  signup.go
client/download/: combineChunks.go  downloadChunks.go  getWhatToDownloadNext.go
client/types/: FilesBeingUploaded.go
client/upload/: handleUpload.go  startUploadOfOneFile.go  startUploadOfOneFileOnlyHashHandler.go  uploadActualData.go
server/auth_service/: Cargo.toml
server/auth_service/migrations/: 20250504181713_users.sql
server/auth_service/src/: main.rs
server/auth_service/src/controllers/: signin.rs  signup.rs
server/auth_service/src/errors/: general_error.rs
server/auth_service/src/models/: user.rs
server/cloud_service/: README.md  index.ts  package-lock.json  package.json
server/cloud_service/constants/: cloudinary.ts  prisma.ts
server/cloud_service/controllers/: isDataPresent.controller.ts  uploadHash.controller.ts  whatToSend.controller.ts
server/cloud_service/prisma/: schema.prisma
server/cloud_service/routes/: cloudData.router.ts
server/metadata_service/: README.md  index.ts  package-lock.json  package.json
server/metadata_service/constants/: cloudinary.ts  prisma.ts  redis.ts
server/metadata_service/controllers/: addFile.controller.ts  deleteFile.controller.ts  nextDownload.controller.ts  nextTask.controller.ts  startUpload.controller.ts  updateStatus.controller.ts
server/metadata_service/middleware/: auth.middleware.ts
server/metadata_service/prisma/: schema.prisma
server/metadata_service/routes/: metadata.router.ts
(+13 files in other folders)
