[package]
name = "auth_service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
bcrypt = "0.17.0"
dotenvy = "0.15.7"
env_logger = "0.11.8"
r2d2 = "0.8.10"
redis = { version = "0.30.0", features = ["r2d2"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio", "tls-native-tls", "macros"] }
uuid = { version = "1.16.0", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }
